package apsara.odps.cupid.protocol;
option java_outer_classname = "SubprocessRpc";

message SubprocessRpcRequest
{
    required string host = 1;
    required int32 port = 2;
    required string data = 3;
}

message RpcRequestWrapper
{
    required string method = 1;
    required string data = 2;
}
