package apsara.odps.cupid.protocol;
option java_outer_classname = "PartitionSplitFileInfo";

message PartitionSplitInfoIterm
{
    optional uint32 partitionid = 1 ;
    optional uint64 splitfilestart = 2;
    optional uint64 splitfileend = 3;
    optional uint64 schemafilestart = 4;
    optional uint64 schemafileend = 5;
}

message PartitionSplitInfo 
{
    repeated PartitionSplitInfoIterm splitinfoiterm = 1;
}

message AnalyzeSplittarParam
{
    optional string tableinputId = 1;
    optional string splitTempDir = 2;
}

message RegisterReadTableRequestParam
{
    optional string rddId = 1;
    optional string partitionid = 2;
    optional string splitstart= 3;
    optional string splitend = 4;
    optional string splitTempDir = 5;
    optional string schemasplitstart= 6;
    optional string schemasplitend = 7;
}

message RegisterReadTableResult
{
    optional string schema = 1;
    optional string readiterator = 2;
    optional string partitionSchema = 3;
}
