package apsara.odps.cupid.protocol;


option java_outer_classname = "StsTokenInfoProtos";

message GenerateStsTokenReq
{
    optional string instanceId = 1;
    optional string roleArn = 2;
    optional string stsTokenType = 3;
}

message GetStsTokenReq
{
    optional string roleArn = 1;
    optional string stsTokenType = 2;
}

message GetStsTokenRes
{
    optional string akId = 1;
    optional string akSecret = 2;
    optional string expirationTime = 3;
    optional string token = 4;
}
